--- a/classification.ipynb
+++ b/classification.ipynb
@@ -3081,7 +3081,171 @@
      "text": [
       "2025/03/13 17:16:49 INFO dspy.teleprompt.mipro_optimizer_v2: \n",
       "Proposing instructions...\n",
-      "\n"
+      "\n",
+      "2025/03/13 17:17:45 INFO dspy.teleprompt.mipro_optimizer_v2: Proposed Instructions for Predictor 0:\n",
+      "\n",
+      "2025/03/13 17:17:45 INFO dspy.teleprompt.mipro_optimizer_v2: 0: Classify historic events.\n",
+      "\n",
+      "2025/03/13 17:17:45 INFO dspy.teleprompt.mipro_optimizer_v2: 1: Given a historic event description, categorize the event into a specific category, such as \"Politics and Governance\", and provide a confidence score between 0 and 2.0, indicating the certainty of the categorization. The event description may include dates, names of individuals, countries, and other relevant details. Analyze the event description using natural language processing techniques to extract relevant features and make predictions about the event's category and confidence level.\n",
+      "\n",
+      "2025/03/13 17:17:45 INFO dspy.teleprompt.mipro_optimizer_v2: 2: Analyze the given historical event description, which includes specific dates, names of individuals, and locations, and categorize it into a relevant category such as \"Politics and Governance\", \"Wars and Conflicts\", or other applicable categories. Provide a confidence score ranging from 0.5 to 2.0, indicating the certainty of the categorization. Ensure the categorization is based on the context and content of the event description, taking into account the involvement of notable figures, countries, or global issues. Utilize natural language processing techniques to identify key phrases and entities within the event description to inform the categorization decision.\n",
+      "\n",
+      "2025/03/13 17:17:45 INFO dspy.teleprompt.mipro_optimizer_v2: 3: Classify the given historic event into a specific category, such as \"Politics and Governance\" or \"Wars and Conflicts\", and provide a confidence score that represents the certainty of the categorization. The event description should be analyzed in detail, taking into account the context, entities involved, and any relevant dates or citations. The categorization should be based on the content and tone of the event description, and the confidence score should reflect the model's uncertainty or certainty in its prediction. The output should be a tuple containing the predicted category and a confidence score, with higher scores indicating greater confidence in the categorization.\n",
+      "\n",
+      "2025/03/13 17:17:45 INFO dspy.teleprompt.mipro_optimizer_v2: 4: Given a historical event description, categorize the event into a specific domain such as \"Wars and Conflicts\", \"Politics and Governance\", or other relevant categories, and provide a confidence score representing the certainty of the categorization, ensuring the output is in the format: \"Category: [category_name], Confidence: [confidence_score]\".\n",
+      "\n",
+      "2025/03/13 17:17:45 INFO dspy.teleprompt.mipro_optimizer_v2: 5: Given a detailed description of a significant global event, categorize the event into a relevant category such as \"Politics and Governance\" or \"Wars and Conflicts\" and provide a confidence score ranging from 0 to 2.1, indicating the certainty of the categorization. Consider the context, key figures, locations, and consequences mentioned in the event description to inform your categorization decision.\n",
+      "\n",
+      "2025/03/13 17:17:45 INFO dspy.teleprompt.mipro_optimizer_v2: 6: Analyze the given event description, which includes details such as dates, locations, and key figures involved, and predict the most appropriate category label (e.g., \"Wars and Conflicts\", \"Politics and Governance\") along with a confidence score that reflects the certainty of the prediction, utilizing the patterns and relationships learned from a comprehensive dataset of labeled events to ensure accuracy and precision in the classification of historic events.\n",
+      "\n",
+      "2025/03/13 17:17:45 INFO dspy.teleprompt.mipro_optimizer_v2: \n",
+      "\n",
+      "2025/03/13 17:17:45 INFO dspy.teleprompt.mipro_optimizer_v2: ==> STEP 3: FINDING OPTIMAL PROMPT PARAMETERS <==\n",
+      "2025/03/13 17:17:45 INFO dspy.teleprompt.mipro_optimizer_v2: We will evaluate the program over a series of trials with different combinations of instructions and few-shot examples to find the optimal combination using Bayesian Optimization.\n",
+      "\n",
+      "2025/03/13 17:17:45 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 1 / 8 - Full Evaluation of Default Program ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Metric: 26.00 / 100 (26.0%): 100%|██████████| 100/100 [00:00<00:00, 3979.30it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 17:17:45 INFO dspy.evaluate.evaluate: Average Metric: 26 / 100 (26.0%)\n",
+      "2025/03/13 17:17:45 INFO dspy.teleprompt.mipro_optimizer_v2: Default program score: 26.0\n",
+      "\n",
+      "/Users/aidand/dev/hello-dspy/env/lib/python3.10/site-packages/optuna/_experimental.py:31: ExperimentalWarning: Argument ``multivariate`` is an experimental feature. The interface can change in the future.\n",
+      "  warnings.warn(\n",
+      "2025/03/13 17:17:45 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 2 / 8 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 15.00 / 25 (60.0%): 100%|██████████| 25/25 [00:32<00:00,  1.32s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 17:18:18 INFO dspy.evaluate.evaluate: Average Metric: 15 / 25 (60.0%)\n",
+      "2025/03/13 17:18:18 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 60.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 1'].\n",
+      "2025/03/13 17:18:18 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [60.0]\n",
+      "2025/03/13 17:18:18 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [26.0]\n",
+      "2025/03/13 17:18:18 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 26.0\n",
+      "2025/03/13 17:18:18 INFO dspy.teleprompt.mipro_optimizer_v2: ========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 17:18:18 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 3 / 8 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 13.00 / 25 (52.0%): 100%|██████████| 25/25 [00:37<00:00,  1.49s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 17:18:55 INFO dspy.evaluate.evaluate: Average Metric: 13 / 25 (52.0%)\n",
+      "2025/03/13 17:18:55 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 52.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 5'].\n",
+      "2025/03/13 17:18:55 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [60.0, 52.0]\n",
+      "2025/03/13 17:18:55 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [26.0]\n",
+      "2025/03/13 17:18:55 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 26.0\n",
+      "2025/03/13 17:18:55 INFO dspy.teleprompt.mipro_optimizer_v2: ========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 17:18:55 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 4 / 8 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 15.00 / 25 (60.0%): 100%|██████████| 25/25 [00:43<00:00,  1.75s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 17:19:39 INFO dspy.evaluate.evaluate: Average Metric: 15 / 25 (60.0%)\n",
+      "2025/03/13 17:19:39 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 60.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 2'].\n",
+      "2025/03/13 17:19:39 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [60.0, 52.0, 60.0]\n",
+      "2025/03/13 17:19:39 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [26.0]\n",
+      "2025/03/13 17:19:39 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 26.0\n",
+      "2025/03/13 17:19:39 INFO dspy.teleprompt.mipro_optimizer_v2: ========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 17:19:39 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 5 / 8 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 14.00 / 25 (56.0%): 100%|██████████| 25/25 [00:28<00:00,  1.13s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 17:20:07 INFO dspy.evaluate.evaluate: Average Metric: 14 / 25 (56.0%)\n",
+      "2025/03/13 17:20:07 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 56.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 5'].\n",
+      "2025/03/13 17:20:07 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [60.0, 52.0, 60.0, 56.0]\n",
+      "2025/03/13 17:20:07 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [26.0]\n",
+      "2025/03/13 17:20:07 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 26.0\n",
+      "2025/03/13 17:20:07 INFO dspy.teleprompt.mipro_optimizer_v2: ========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 17:20:07 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 6 / 8 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 15.00 / 25 (60.0%): 100%|██████████| 25/25 [00:52<00:00,  2.11s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 17:21:00 INFO dspy.evaluate.evaluate: Average Metric: 15 / 25 (60.0%)\n",
+      "2025/03/13 17:21:00 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 60.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 4'].\n",
+      "2025/03/13 17:21:00 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [60.0, 52.0, 60.0, 56.0, 60.0]\n",
+      "2025/03/13 17:21:00 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [26.0]\n",
+      "2025/03/13 17:21:00 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 26.0\n",
+      "2025/03/13 17:21:00 INFO dspy.teleprompt.mipro_optimizer_v2: ========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 17:21:00 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 7 / 8 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 9.00 / 18 (50.0%):  72%|███████▏  | 18/25 [00:17<00:04,  1.59it/s]"
      ]
     }
    ],
