--- a/classification.ipynb
+++ b/classification.ipynb
@@ -2954,7 +2954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -3245,7 +3245,52 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Average Metric: 9.00 / 18 (50.0%):  72%|███████▏  | 18/25 [00:17<00:04,  1.59it/s]"
+      "Average Metric: 13.00 / 25 (52.0%): 100%|██████████| 25/25 [00:23<00:00,  1.08it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 17:21:23 INFO dspy.evaluate.evaluate: Average Metric: 13 / 25 (52.0%)\n",
+      "2025/03/13 17:21:23 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 52.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 1'].\n",
+      "2025/03/13 17:21:23 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [60.0, 52.0, 60.0, 56.0, 60.0, 52.0]\n",
+      "2025/03/13 17:21:23 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [26.0]\n",
+      "2025/03/13 17:21:23 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 26.0\n",
+      "2025/03/13 17:21:23 INFO dspy.teleprompt.mipro_optimizer_v2: ========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 17:21:23 INFO dspy.teleprompt.mipro_optimizer_v2: ===== Trial 8 / 8 - Full Evaluation =====\n",
+      "2025/03/13 17:21:23 INFO dspy.teleprompt.mipro_optimizer_v2: Doing full eval on next top averaging program (Avg Score: 60.0) from minibatch trials...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 62.00 / 100 (62.0%): 100%|██████████| 100/100 [02:05<00:00,  1.25s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 17:23:28 INFO dspy.evaluate.evaluate: Average Metric: 62 / 100 (62.0%)\n",
+      "2025/03/13 17:23:28 INFO dspy.teleprompt.mipro_optimizer_v2: \u001b[92mNew best full eval score!\u001b[0m Score: 62.0\n",
+      "2025/03/13 17:23:28 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [26.0, 62.0]\n",
+      "2025/03/13 17:23:28 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 62.0\n",
+      "2025/03/13 17:23:28 INFO dspy.teleprompt.mipro_optimizer_v2: =======================\n",
+      "2025/03/13 17:23:28 INFO dspy.teleprompt.mipro_optimizer_v2: \n",
+      "\n",
+      "2025/03/13 17:23:28 INFO dspy.teleprompt.mipro_optimizer_v2: Returning best identified program with score 62.0!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -3264,10 +3309,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "optimized_classify.save(\"optimized_classify_31_1b_2.json\")"
+   ]
   }
  ],
  "metadata": {
