--- a/classification.ipynb
+++ b/classification.ipynb
@@ -3315,6 +3315,15 @@
    "source": [
     "optimized_classify.save(\"optimized_classify_31_1b_2.json\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluator(optimized_classify, metric=validate_category)"
+   ]
   }
  ],
  "metadata": {
