--- a/classification.ipynb
+++ b/classification.ipynb
@@ -3320,9 +3320,31 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Metric: 10.00 / 12 (83.3%):  12%|█▏        | 12/98 [00:44<05:06,  3.56s/it]"
+     ]
+    }
+   ],
    "source": [
     "evaluator(optimized_classify, metric=validate_category)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classifications = events['event_string'].apply(classify_event_optimized)\n",
+    "\n",
+    "events['category_31_1b_optimized_2'] = [result[0] for result in classifications]\n",
+    "events['confidence_31_1b_optimized_2'] = [result[1] for result in classifications]\n",
+    "\n",
+    "events"
    ]
   }
  ],
