--- a/classification.ipynb
+++ b/classification.ipynb
@@ -3318,15 +3318,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Metric: 10.00 / 12 (83.3%):  12%|█▏        | 12/98 [00:44<05:06,  3.56s/it]"
+      "Average Metric: 62.00 / 98 (63.3%): 100%|██████████| 98/98 [05:34<00:00,  3.42s/it]"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 17:31:56 INFO dspy.evaluate.evaluate: Average Metric: 62 / 98 (63.3%)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>event</th>\n",
+       "      <th>example_category</th>\n",
+       "      <th>pred_category</th>\n",
+       "      <th>confidence</th>\n",
+       "      <th>validate_category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024 Comorian presidential election: Amid an opposition boycott, i...</td>\n",
+       "      <td>Politics and Governance</td>\n",
+       "      <td>Politics and Governance</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>✔️ [True]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>November 27 – After forming a coalition Government with the right-...</td>\n",
+       "      <td>Politics and Governance</td>\n",
+       "      <td>Politics and Governance</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>✔️ [True]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>December 12 – At the COP28 climate summit in Dubai, a consensus is...</td>\n",
+       "      <td>Politics and Governance</td>\n",
+       "      <td>Politics and Governance</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>✔️ [True]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>June 6–9 – The 2024 European Parliament election is held. The EPP,...</td>\n",
+       "      <td>Politics and Governance</td>\n",
+       "      <td>Politics and Governance</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>✔️ [True]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>November 29 – 2024 Irish general election: Centre-right party Fian...</td>\n",
+       "      <td>Politics and Governance</td>\n",
+       "      <td>Politics and Governance</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>✔️ [True]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                   event  \\\n",
+       "0  2024 Comorian presidential election: Amid an opposition boycott, i...   \n",
+       "1  November 27 – After forming a coalition Government with the right-...   \n",
+       "2  December 12 – At the COP28 climate summit in Dubai, a consensus is...   \n",
+       "3  June 6–9 – The 2024 European Parliament election is held. The EPP,...   \n",
+       "4  November 29 – 2024 Irish general election: Centre-right party Fian...   \n",
+       "\n",
+       "          example_category            pred_category  confidence  \\\n",
+       "0  Politics and Governance  Politics and Governance         0.8   \n",
+       "1  Politics and Governance  Politics and Governance         0.8   \n",
+       "2  Politics and Governance  Politics and Governance         0.8   \n",
+       "3  Politics and Governance  Politics and Governance         0.8   \n",
+       "4  Politics and Governance  Politics and Governance         0.8   \n",
+       "\n",
+       "  validate_category  \n",
+       "0         ✔️ [True]  \n",
+       "1         ✔️ [True]  \n",
+       "2         ✔️ [True]  \n",
+       "3         ✔️ [True]  \n",
+       "4         ✔️ [True]  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                <div style='\n",
+       "                    text-align: center;\n",
+       "                    font-size: 16px;\n",
+       "                    font-weight: bold;\n",
+       "                    color: #555;\n",
+       "                    margin: 10px 0;'>\n",
+       "                    ... 93 more rows not displayed ...\n",
+       "                </div>\n",
+       "                "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "63.27"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div>\n",
+       "  <style scoped>\n",
+       "  button {\n",
+       "    border: none;\n",
+       "    border-radius: 4px;\n",
+       "    background-color: rgb(34, 114, 180);\n",
+       "    font-family: -apple-system, \"system-ui\", \"Segoe UI\", Roboto, \"Helvetica Neue\", Arial;\n",
+       "    font-size: 13px;\n",
+       "    color: white;\n",
+       "    margin-top: 8px;\n",
+       "    margin-bottom: 8px;\n",
+       "    padding: 8px 16px;\n",
+       "    cursor: pointer;\n",
+       "  }\n",
+       "  button:hover {\n",
+       "    background-color: rgb(66, 153, 224);\n",
+       "  }\n",
+       "  </style>\n",
+       "  <button\n",
+       "    onclick=\"\n",
+       "        const display = this.nextElementSibling.style.display;\n",
+       "        const isCollapsed = display === 'none';\n",
+       "        this.nextElementSibling.style.display = isCollapsed ? null : 'none';\n",
+       "\n",
+       "        const verb = isCollapsed ? 'Collapse' : 'Expand';\n",
+       "        this.innerText = `${verb} MLflow Trace`;\n",
+       "    \"\n",
+       "  >Collapse MLflow Trace</button>\n",
+       "  <iframe\n",
+       "    id=\"trace-renderer\"\n",
+       "    style=\"width: 100%; height: 500px; border: none; resize: vertical;\"\n",
+       "    src=\"http://localhost:5000/static-files/lib/notebook-trace-renderer/index.html?trace_id=fefaad5587d0426ea946f5add78ee357&amp;experiment_id=374362034103955121&amp;trace_id=16ce8d707e0e47ac8aebbf394f483aca&amp;experiment_id=374362034103955121&amp;trace_id=60f2d37d8eaf4abea7ac38fc8846f88d&amp;experiment_id=374362034103955121&amp;trace_id=adea65d5ea3148f7a603a3da17d37a9f&amp;experiment_id=374362034103955121&amp;trace_id=c7bc87e4d7af4c2d8942faf01afe0fbd&amp;experiment_id=374362034103955121&amp;trace_id=b45ca52fe397496d96b8f0ce8329d427&amp;experiment_id=374362034103955121&amp;trace_id=1da6c28839a540fa9b27eb703febcc6c&amp;experiment_id=374362034103955121&amp;trace_id=c5272603aaab4aecacc494ab48aac143&amp;experiment_id=374362034103955121&amp;trace_id=34af1ff67ffe4fcd8912fa9007f794a1&amp;experiment_id=374362034103955121&amp;trace_id=891e5c4f398e481095c79a934042794a&amp;experiment_id=374362034103955121&amp;version=2.20.3\"\n",
+       "  />\n",
+       "</div>\n"
+      ],
+      "text/plain": [
+       "[Trace(request_id=fefaad5587d0426ea946f5add78ee357), Trace(request_id=16ce8d707e0e47ac8aebbf394f483aca), Trace(request_id=60f2d37d8eaf4abea7ac38fc8846f88d), Trace(request_id=adea65d5ea3148f7a603a3da17d37a9f), Trace(request_id=c7bc87e4d7af4c2d8942faf01afe0fbd), Trace(request_id=b45ca52fe397496d96b8f0ce8329d427), Trace(request_id=1da6c28839a540fa9b27eb703febcc6c), Trace(request_id=c5272603aaab4aecacc494ab48aac143), Trace(request_id=34af1ff67ffe4fcd8912fa9007f794a1), Trace(request_id=891e5c4f398e481095c79a934042794a)]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
