--- a/multihop.ipynb
+++ b/multihop.ipynb
@@ -17,6 +17,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "mlflow.dspy.autolog()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
