--- a/classification-finetuning.ipynb
+++ b/classification-finetuning.ipynb
@@ -1,20 +1,48 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pip install \"sglang[all]\"; pip install flashinfer -i https://flashinfer.ai/whl/cu121/torch2.4/\n",
+    "\n",
+    "pip install -U torch transformers accelerate trl peft"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import dspy\n",
+    "import random\n",
+    "from dspy.datasets import DataLoader\n",
+    "from datasets import load_dataset\n",
+    "\n",
+    "# Load the Banking77 dataset.\n",
+    "CLASSES = load_dataset(\"PolyAI/banking77\", split=\"train\", trust_remote_code=True).features['label'].names\n",
+    "kwargs = dict(fields=(\"text\", \"label\"), input_keys=(\"text\",), split=\"train\", trust_remote_code=True)\n",
+    "\n",
+    "# Load the first 2000 examples from the dataset, and assign a hint to each *training* example.\n",
+    "raw_data = [\n",
+    "    dspy.Example(x, label=CLASSES[x.label]).with_inputs(\"text\")\n",
+    "    for x in DataLoader().from_huggingface(dataset_name=\"PolyAI/banking77\", **kwargs)[:1000]\n",
+    "]\n",
+    "\n",
+    "random.Random(0).shuffle(raw_data)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
