--- a/classification-finetuning.ipynb
+++ b/classification-finetuning.ipynb
@@ -11,9 +11,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/coder/dev/hello-dspy/env/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Downloading builder script: 100%|██████████| 7.17k/7.17k [00:00<00:00, 22.0kB/s]\n",
+      "Downloading metadata: 100%|██████████| 5.89k/5.89k [00:04<00:00, 1.30kB/s]\n",
+      "Downloading readme: 100%|██████████| 9.78k/9.78k [00:04<00:00, 2.36kB/s]\n",
+      "Downloading data: 839kB [00:00, 92.4MB/s]                   \n",
+      "Downloading data: 240kB [00:00, 70.6MB/s]                    \n",
+      "Generating train split: 100%|██████████| 10003/10003 [00:00<00:00, 57354.35 examples/s]\n",
+      "Generating test split: 100%|██████████| 3080/3080 [00:00<00:00, 57634.37 examples/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['activate_my_card', 'age_limit', 'apple_pay_or_google_pay', 'atm_support', 'automatic_top_up', 'balance_not_updated_after_bank_transfer', 'balance_not_updated_after_cheque_or_cash_deposit', 'beneficiary_not_allowed', 'cancel_transfer', 'card_about_to_expire', 'card_acceptance', 'card_arrival', 'card_delivery_estimate', 'card_linking', 'card_not_working', 'card_payment_fee_charged', 'card_payment_not_recognised', 'card_payment_wrong_exchange_rate', 'card_swallowed', 'cash_withdrawal_charge', 'cash_withdrawal_not_recognised', 'change_pin', 'compromised_card', 'contactless_not_working', 'country_support', 'declined_card_payment', 'declined_cash_withdrawal', 'declined_transfer', 'direct_debit_payment_not_recognised', 'disposable_card_limits', 'edit_personal_details', 'exchange_charge', 'exchange_rate', 'exchange_via_app', 'extra_charge_on_statement', 'failed_transfer', 'fiat_currency_support', 'get_disposable_virtual_card', 'get_physical_card', 'getting_spare_card', 'getting_virtual_card', 'lost_or_stolen_card', 'lost_or_stolen_phone', 'order_physical_card', 'passcode_forgotten', 'pending_card_payment', 'pending_cash_withdrawal', 'pending_top_up', 'pending_transfer', 'pin_blocked', 'receiving_money', 'Refund_not_showing_up', 'request_refund', 'reverted_card_payment?', 'supported_cards_and_currencies', 'terminate_account', 'top_up_by_bank_transfer_charge', 'top_up_by_card_charge', 'top_up_by_cash_or_cheque', 'top_up_failed', 'top_up_limits', 'top_up_reverted', 'topping_up_by_card', 'transaction_charged_twice', 'transfer_fee_charged', 'transfer_into_account', 'transfer_not_received_by_recipient', 'transfer_timing', 'unable_to_verify_identity', 'verify_my_identity', 'verify_source_of_funds', 'verify_top_up', 'virtual_card_not_working', 'visa_or_mastercard', 'why_verify_identity', 'wrong_amount_of_cash_received', 'wrong_exchange_rate_for_cash_withdrawal']\n"
+     ]
+    }
+   ],
    "source": [
     "import dspy\n",
     "import random\n",
@@ -23,7 +46,7 @@
     "# Load the Banking77 dataset.\n",
     "CLASSES = load_dataset(\"PolyAI/banking77\", split=\"train\", trust_remote_code=True).features['label'].names\n",
     "kwargs = dict(fields=(\"text\", \"label\"), input_keys=(\"text\",), split=\"train\", trust_remote_code=True)\n",
-    "\n",
+    "print(CLASSES)\n",
     "# Load the first 2000 examples from the dataset, and assign a hint to each *training* example.\n",
     "raw_data = [\n",
     "    dspy.Example(x, label=CLASSES[x.label]).with_inputs(\"text\")\n",
@@ -31,6 +54,69 @@
     "]\n",
     "\n",
     "random.Random(0).shuffle(raw_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(77,\n",
+       " ['activate_my_card',\n",
+       "  'age_limit',\n",
+       "  'apple_pay_or_google_pay',\n",
+       "  'atm_support',\n",
+       "  'automatic_top_up',\n",
+       "  'balance_not_updated_after_bank_transfer',\n",
+       "  'balance_not_updated_after_cheque_or_cash_deposit',\n",
+       "  'beneficiary_not_allowed',\n",
+       "  'cancel_transfer',\n",
+       "  'card_about_to_expire'])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(CLASSES), CLASSES[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Example({'text': 'What if there is an error on the exchange rate?'}) (input_keys={'text'})"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unlabeled_trainset = [dspy.Example(text=x.text).with_inputs(\"text\") for x in raw_data[:500]]\n",
+    "\n",
+    "unlabeled_trainset[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Literal\n",
+    "\n",
+    "classify = dspy.ChainOfThought(f\"text -> label: Literal{CLASSES}\")"
    ]
   }
  ],
@@ -41,7 +127,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.16"
   }
  },
