--- a/classification-finetuning.ipynb
+++ b/classification-finetuning.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,6 +118,29 @@
     "\n",
     "classify = dspy.ChainOfThought(f\"text -> label: Literal{CLASSES}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dspy.clients.lm_local import LocalProvider\n",
+    "\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "\n",
+    "student_lm_name = \"meta-llama/Llama-3.2-1B-Instruct\"\n",
+    "student_lm = dspy.LM(model=f\"openai/local:{student_lm_name}\", provider=LocalProvider(), max_tokens=2000)\n",
+    "teacher_lm = dspy.LM('openai/gpt-4o-mini', max_tokens=3000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
