--- a/multihop.ipynb
+++ b/multihop.ipynb
@@ -49,7 +49,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%pip install -U bm25s PyStemmer \"jax[cpu]\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading 'wiki.abstracts.2017.tar.gz'...\n",
+      "x wiki.abstracts.2017.jsonl\n"
+     ]
+    }
+   ],
+   "source": [
+    "from dspy.utils import download\n",
+    "\n",
+    "download(\"https://huggingface.co/dspy/cache/resolve/main/wiki.abstracts.2017.tar.gz\")\n",
+    "!tar -xzvf wiki.abstracts.2017.tar.gz"
+   ]
   }
  ],
  "metadata": {
